# Miko-pacman

./: README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
doc/: asciidoc.conf  meson.build
etc/: makepkg.conf.in  miko.conf.in
lib/libalpm/: add.c  add.h  alpm.c  alpm.h  alpm_list.c  alpm_list.h  backup.c  backup.h  be_local.c  be_package.c  be_sync.c  conflict.c  conflict.h  db.c  db.h  deps.c  deps.h  diskspace.c  diskspace.h  dload.c  dload.h  error.c  filelist.c  filelist.h  graph.c  graph.h  group.c  group.h  handle.c  handle.h  hook.c  hook.h  libarchive-compat.h  log.c  log.h  package.c  package.h  pkghash.c  pkghash.h  remove.c  (+16 more)
lib/libalpm/po/: meson.build
scripts/: libmakepkg.pc.in  makepkg-template.pl.in  makepkg.sh.in  meson.build  miko-db-upgrade.sh.in  miko-key.sh.in  repo-add.sh.in  wrapper.sh.in
scripts/completion/: bash_completion.in  zsh_completion.in
scripts/libmakepkg/: autodep.sh.in  buildenv.sh.in  executable.sh.in  integrity.sh.in  lint_config.sh.in  lint_package.sh.in  lint_pkgbuild.sh.in  reproducible.sh.in  source.sh.in  srcinfo.sh.in  tidy.sh.in  util.sh.in
scripts/libmakepkg/autodep/: library_depends.sh.in  library_provides.sh.in
scripts/libmakepkg/buildenv/: buildflags.sh.in  compiler.sh.in  debugflags.sh.in  fortran.sh.in  lto.sh.in  makeflags.sh.in  rust.sh.in
scripts/libmakepkg/executable/: ccache.sh.in  checksum.sh.in  debugedit.sh.in  distcc.sh.in  fakeroot.sh.in  gpg.sh.in  gzip.sh.in  meson.build  miko.sh.in  sccache.sh.in  strip.sh.in  sudo.sh.in  vcs.sh.in
scripts/libmakepkg/integrity/: generate_checksum.sh.in  generate_signature.sh.in  verify_checksum.sh.in  verify_signature.sh.in
scripts/libmakepkg/lint_config/: buildenv.sh.in  ext.sh.in  nproc.sh.in  packager.sh.in  paths.sh.in  source_date_epoch.sh.in  variable.sh.in
scripts/libmakepkg/lint_package/: build_references.sh.in  dotfiles.sh.in  file_names.sh.in  missing_backup.sh.in
scripts/libmakepkg/lint_pkgbuild/: arch.sh.in  arch_specific.sh.in  backup.sh.in  changelog.sh.in  checkdepends.sh.in  conflicts.sh.in  depends.sh.in  epoch.sh.in  fullpkgver.sh.in  install.sh.in  makedepends.sh.in  optdepends.sh.in  options.sh.in  package_function.sh.in  package_function_variable.sh.in  pkgbase.sh.in  pkgname.sh.in  pkgrel.sh.in  pkgver.sh.in  provides.sh.in  source.sh.in  util.sh.in  variable.sh.in  xdata.sh.in
scripts/libmakepkg/reproducible/: source_date_epoch.sh.in
scripts/libmakepkg/source/: bzr.sh.in  file.sh.in  fossil.sh.in  git.sh.in  hg.sh.in  local.sh.in  svn.sh.in
scripts/libmakepkg/tidy/: 10-docs.sh.in  10-libtool.sh.in  10-staticlibs.sh.in  50-purge.sh.in  50-strip.sh.in  50-zipman.sh.in  90-emptydirs.sh.in
scripts/libmakepkg/util/: compress.sh.in  config.sh.in  dirsize.sh.in  error.sh.in  message.sh.in  option.sh.in  parseopts.sh.in  pkgbuild.sh.in  schema.sh.in  source.sh.in  util.sh.in
scripts/po/: POTFILES.in  meson.build
src/common/: ini.c  ini.h
src/miko/: callback.c  callback.h  check.c  check.h  conf.c  conf.h  database.c  deptest.c  files.c  meson.build  miko-conf.c  miko.c  miko.h  package.c  package.h  query.c  remove.c  sighandler.c  sighandler.h  sync.c  upgrade.c  util-common.c  util.c  util.h
src/miko/po/: POTFILES.in  meson.build  miko.pot
src/util/: testpkg.c  util-common.h  vercmp.c
test/miko/: meson.build
test/miko/tests/: cache-server-basic.py  scriptlet-signal-handling.py  sync306.py  upgrade-download-pkg-and-sig-with-filename.py
test/util/: vercmptest.sh
