i18n.gettext(
  'miko-scripts',
  args : [
    '--directory=@0@'.format(meson.current_source_dir()),
    '--msgid-bugs-address=https://gitlab.archlinux.org/miko/miko/-/issues',
    '--copyright-holder="Miko Development Team <miko-dev@lists.archlinux.org>"',
    '--language', 'shell',

    '--keyword=_',
    '--flag=_:1:c-format',

    '--keyword=_n:1,2',
    '--flag=_n:1:c-format',
    '--flag=_n:2:c-format',
  ])
