miko_sources = files('''
  check.h check.c
  conf.h conf.c
  database.c
  deptest.c
  files.c
  package.h package.c
  miko.h miko.c
  query.c
  remove.c
  sighandler.h sighandler.c
  sync.c
  callback.h callback.c
  upgrade.c
  util.h util.c
'''.split())

miko_conf_sources = files('''
  miko-conf.c
  util.h util.c
  callback.h callback.c
  conf.h conf.c
'''.split())
